--- a/url_shortner/templates/home.html
+++ b/url_shortner/templates/home.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
+    </head>
 <body>
        
     <form method="POST" action="{{ url_for('short.add_link') }}">
-        <label>Original URL</label>
-        <input class="input" type="text" name="original_url">
+        <!-- <input class="input" type="text" name="original_url"> -->
+        <input class="input is-rounded" id='text' type="text" name="original_url" placeholder="Enter URL">
         <button type="submit" class="button is-info">Shorten</button>
     </form>
          
